...
        keyTarget: widget.toggleKey ?? _toggleKey,
        enableOverlayTab: true,
        contents: [
          TargetContent(
            align: ContentAlign.bottom,
            child: const Text(
              "To assign patients to a different therapist you must first be"
                  " logged in as an owner. Once logged in as an owner, navigate"
                  " to the Therapists page and select a therapist with patients"
                  " under their care.\n\nOnce here, click the Reassign Patients"
                  " button to toggle patient reassignment mode.",
              style: TextStyle(color: Colors.white, fontSize: 20),
            ),
...
        keyTarget: widget.reassignToButtonKey ?? _reassignToButtonKey,
        enableOverlayTab: true,
        contents: [
          TargetContent(
            align: ContentAlign.bottom,
            child: const Text(
              "Finally, tap the 'Reassign to...' button and select the therapist"
                  " you would like the patient to be assigned to. If successful,"
                  " the patient will now be assigned to the selected therapist.",
              style: TextStyle(color: Colors.white, fontSize: 20),
            ),
          ),
        ],
...
        title: Row(
          children: [
            Expanded(
              child: Text(widget.title ?? 'Patients'),
            ),
            Tooltip(
              message: 'Toggle patient reassignment mode',
              child: TextButton(
                key: widget.toggleKey ?? _toggleKey,
                onPressed: toggleAssignMode,
                style: TextButton.styleFrom(
                  backgroundColor: assignMode ? Colors.green : Colors.red,
                  foregroundColor: Colors.black,
...
          Visibility(
            visible: assignMode && selectedPatients.isNotEmpty,
            maintainSize: true,
            maintainAnimation: true,
            maintainState: true,
            child: Tooltip(
              message: 'Choose a new therapist to reassign patients',
              child: TextButton(
                key: widget.reassignToButtonKey ?? _reassignToButtonKey,
                onPressed: () {
                  if (mounted && therapistOld != null) {
                    Navigator.pushReplacement(
                      context,
...
