...
              onTap: () {
                Navigator.pushReplacementNamed(context, ExportPage.RouteName);
              },
            ),
        ListTile(
          key: const Key('tutorials_tile'),
          title: const Text('Tutorials'),
          onTap: () {
            Navigator.pushNamed(context, TutorialPage.RouteName);
          },
        ),
          ] +
          allowedTabs;
...
                        onTap: () {
                          Navigator.pushReplacementNamed(
                              context, RegistrationPage.RouteName);
                        },
                      ),
                      ListTile(
                        title: const Text('Login'),
                        onTap: () {
                          Navigator.pushReplacementNamed(
                              context, LoginPage.RouteName);
                        },
                      ),
                    ],
...
